--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="flex">
             <div class="left">
-                <div class="item">1</div>
+                <div class="item">1Pirmas</div>
             </div>
             <div class="right">
                 <div class="right-top">
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div>
-
+        
         <div class="grid">
                 <div class="gridas">1</div>
                 <div class="grid2">2</div>
