galutiniai mobile/desktop cv variantai su fotkem

--- a/index.html
+++ b/index.html
@@ -1,30 +1,111 @@
 <!DOCTYPE html>
 <html lang ="en">
     <head>
-        <title> gridflexbox</title>
+        <title> Resume Desktop/Mobile versions</title>
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
-        <div class="flex">
-            <div class="left">
-                <div class="item">1Pirmas</div>
-            </div>
-            <div class="right">
-                <div class="right-top">
-                <div class="item">2</div>
+        <script nomodule="" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <div class="wrapper">
+            <div class="leftside">
+                    <div class="name">
+                    <h2>Tadas Mincė</h2>
+                    <h4>HTML/CSS developer</h4>
+                    </div>
+                    <div class="photo"></div>
+                    <h3 class="aboutme">About me</h3>
+                    <div class="aboutme"> Apie mane Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab blanditiis, magnam facere architecto beatae dignissimos atque porro obcaecati neque?</div>
+                    <h3>Contacts</h3>
+                    <div class="contacts">
+                    <span class="phone">
+                        <ion-icon name="phone-portrait-outline"></ion-icon> +37062842905
+                    </span>
+                    <span class="email">
+                        <ion-icon name="mail-outline"></ion-icon> toris@toriauskas.com
+                    </span>
+                    <span class="location">
+                        <ion-icon name="earth-outline"></ion-icon> Vilnius, Lithuania
+                    </span>
                 </div>
-                <div class="right-bottom">
-                    <div class="item">3</div>
-                    <div class="item">4</div>
+                <div class="icons">
+                    <a class="facebook" href="https://www.facebook.com/" target="_blank">
+                    <ion-icon name="logo-facebook" role="img" class="md hydrated" aria-label="logo facebook"></ion-icon>
+                    </a>
+                    <a class="instagram" href="https://www.instagram.com/" target="_blank"> 
+                        <ion-icon name="logo-instagram" role="img" class="md hydrated" aria-label="logo instagram"></ion-icon>
+                       </a>
+                    <a href="https://www.linkedin.com/" target="_blank"> 
+                        <ion-icon name="logo-linkedin" role="img" class="md hydrated" aria-label="logo linkedin"></ion-icon>
+                    </a>
                 </div>
             </div>
-        </div>
+            <div class="rightside">       
+                    <div class="work">
+                    <div>
+                        <h2>Work Experience</h2>
+                        <ul class="job">
+                            <li>
+                                <h5>2017-2022 <span class="text">Google</span></h5>
+                                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit.labore esse animi quaerat voluptate natus!</h4>
+                                <ul>
+                                    <li>Coding</li>
+                                    <li>Testing</li>
+                                    <li>Teamwork</li>
+                                </ul>
+                            </li> 
+                            <li>
+                                <h5>2015-2017 <span class="text">Facebook</span></h5>
+                                <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi omnis magni sapiente exercitationem alias laboriosam excepturi, fuga iure ex, asperiores odit veritatis tempora accusantium officiis dignissimos porro facere nobis. </h4>
+                                <ul>
+                                    <li>Testing</li>
+                                    <li>Help for colleagues</li>
+                                </ul>
+                            </li> 
+                            <li>
+                                <h5>2014-2015 <span class="text">Instagram intership</span></h5>
+                                <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, accusantium quo. Voluptatibus nihil maxime.</h4>
+                            </li> 
+                        </ul>
+                    </div>
+                    </div>
+                    <div class="education">
+                        <h2>Education</h2>
+                        <ul class="job">
+                            <li>
+                                <h5 class="year">2022-current<span class="text">Renkuosi programuoti</span></h5>
+                                <h4>Code Academy</h4>
+                            </li> 
+                            <li>
+                                <h5 class="year">2011-2015<span class="text">Bachelor degree</span></h5>
+                                <h4>VGTU UNIVERSITY</h4>
+                            </li> 
+                            <li>
+                                <h5>1999-2011 <span class="text">High school</span></h5>
+                                <h4>Vilnius Gymnasium</h4>
+                            </li> 
+                        </ul>
+                    </div>
+                    <div class="skills">
+                        <h2>Skills</h2>
+                        <p>HTML</p>
+                        <div class="container">
+                            <div class="html">50%</div>
+                        </div>
+                        <p>CSS</p>
+                        <div class="container">
+                            <div class="CSS">50%</div>
+                        </div>
+                        <p>Javascript</p>
+                        <div class="container">
+                            <div class="javascript">5%</div>
+                        </div>
+                        <p>PYTHON</p>
+                        <div class="container">
+                            <div class="python">0%</div>
+                        </div>
+                    </div>
+            </div>
         
-        <div class="grid">
-                <div class="gridas">1</div>
-                <div class="grid2">2</div>
-                <div class="gri">3</div>
-                <div class="gr">4</div>
-        </div>
 </body>
 </html>
